# rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.code-runner  README.md  docker-compose.yaml  pyproject.toml  requirements-code-runner.txt  requirements-service-local.txt  requirements-service.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: container-release.yaml  live-api.yaml  quality.yaml
bpmn/: engineer_support.bpmn
config/: agent.yaml  agent_gigachat.yaml  agent_local.yaml  agent_openai.yaml  agent_scenarios.yaml  chunking.yaml  chunking_gigachat.yaml  chunking_local.yaml  chunking_openai.yaml  default.yaml  embeddings.yaml  embeddings_gigachat.yaml  embeddings_local.yaml  embeddings_openai.yaml  fine_tuning.yaml  fine_tuning_smoke.yaml  multi_agent_docker_gigachat_local_embeddings.yaml  multi_agent_docker_gigachat_local_embeddings_observability.yaml  multi_agent_docker_gigachat_openai_embeddings.yaml  multi_agent_docker_gigachat_openai_embeddings_observability.yaml  multi_agent_docker_local.yaml  multi_agent_docker_local_observability.yaml  multi_agent_docker_mixed.yaml  multi_agent_docker_mixed_observability.yaml  multi_agent_docker_openai.yaml  multi_agent_docker_openai_observability.yaml  multi_agent_gigachat.yaml  multi_agent_local.yaml  multi_agent_mixed.yaml  multi_agent_module2_scenarios.yaml  multi_agent_openai.yaml  multi_agent_scenarios.yaml  multi_agent_tool_memory_scenarios.yaml  support_agent_docker_gigachat_local_embeddings.yaml  support_agent_docker_gigachat_local_embeddings_observability.yaml  support_agent_docker_gigachat_openai_embeddings.yaml  support_agent_docker_gigachat_openai_embeddings_observability.yaml  support_agent_docker_local.yaml  support_agent_docker_local_observability.yaml  support_agent_docker_openai.yaml  (+13 more)
config/evaluation/: engineering_support_cases.yaml
config/profiles/agent/: gigachat.yaml  local.yaml  openai.yaml
config/profiles/rag/: gigachat.yaml  local.yaml  openai.yaml
config/profiles/support/: agent_gigachat.yaml  agent_local.yaml  agent_openai.yaml  base.yaml  deployment_docker.yaml  deployment_docker_local_embeddings.yaml  deployment_host.yaml  multi_agent.yaml  multi_agent_docker_tools.yaml  multi_agent_llm_mixed.yaml  observability_docker.yaml  orchestration.yaml  orchestration_docker.yaml  rag_runtime_local.yaml  rag_runtime_openai.yaml  security_jwt.yaml  state_gigachat_local.yaml  state_gigachat_openai.yaml  state_local.yaml  state_openai.yaml
data/fine_tuning/: eval.jsonl  train.jsonl
data/raw/: sample.csv  sample.html  sample.txt
observability/: alertmanager.yaml  alerts.yaml  otel-collector.yaml  prometheus.yaml
observability/grafana/dashboards/: support-agent.json
scripts/: check_live_integrations.py  download_hf_model.py  rebuild_docker.ps1
src/agent_app/: __init__.py  cli.py  cli_formatting.py  config.py  currency.py  graph.py  llm.py  models.py  paths.py  prompts.py
src/agent_app/evaluation/: __init__.py  cli.py  dataset.py  exporting.py  metrics.py  models.py  runner.py
src/agent_app/guardrails/: __init__.py  audit.py  models.py  pipeline.py  reviews.py
src/agent_app/memory/: __init__.py  policy.py  short_term.py  store.py  summary.py
src/agent_app/multi_agent/: __init__.py  bus.py  decomposition.py  evaluation.py  exporting.py  graph.py  lifecycle.py  llm_routing.py  models.py  persistence.py  roles.py  runtime.py  sanitization.py  tracking.py  usage.py
src/agent_app/observability/: __init__.py  logging.py  telemetry.py
src/agent_app/orchestration/: __init__.py  camunda.py  camunda_cli.py  engine.py  errors.py  (+9 more)
src/code_runner/: __init__.py  app.py  cli.py  sandbox.py
src/llm_tuning/: __init__.py  cli.py  comparison.py  config.py  dataset.py  device.py  evaluation.py  exporting.py  generation.py  metrics.py  modeling.py  models.py  pipeline.py  tokenization.py  training.py
src/rag_prep/: __init__.py  cli.py  config.py  config_composition.py  flow.py  gigachat_tls.py  mlflow_uri.py  models.py  pipeline.py  tracking.py  utils.py  vector_store_cli.py
tests/: test_a2a_store.py  test_agent_cli.py  test_agent_loop_guard.py  test_agent_observability.py  test_agent_quality.py  test_agent_security.py  test_agent_tool_retry.py  test_artifact_lineage.py  test_artifact_transaction.py  test_chunk_overlap.py  test_chunking_stage.py  test_cli_execution.py  test_cli_help.py  test_code_runner.py  test_config_composition.py  test_currency_conversion.py  test_docker_security.py  test_docstrings.py  test_download_hf_model.py  test_embedding_providers.py  test_embedding_stage.py  test_embedding_validation.py  test_empty_scenarios.py  test_external_mcp.py  test_filesystem_tools.py  test_fine_tuning_execution.py  test_fine_tuning_model_resolution.py  test_fine_tuning_reports.py  test_fine_tuning_support.py  test_fine_tuning_tokenization.py  test_llm_providers.py  test_local_llm_limits.py  test_memory_isolation.py  test_mlflow_tracking_uri.py  test_multi_agent_configs.py  test_multi_agent_core.py  test_multi_agent_memory_and_tools.py  test_multi_agent_runtime.py  test_multi_agent_service.py  test_online_rag.py  (+17 more)
(+67 files in other folders)
