[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-data-prep"
version = "0.1.0"
description = "Reproducible data preparation pipeline for RAG sources."
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "datasketch>=1.10.0",
  "llama-index>=0.14.21",
  "llama-index-readers-file>=0.6.0",
  "lxml>=6.1.0",
  "mlflow>=3.12.0",
  "pandas>=2.3.3",
  "prefect>=3.7.0",
  "pydantic==2.12.5",
  "python-dotenv>=1.2.2",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "PyYAML>=6.0.3",
  "spacy>=3.8.14",
  "unstructured[pdf]>=0.22.27",
  "unstructured-inference>=1.6.11",
]

[project.scripts]
rag-prep = "rag_prep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
