[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-data-prep"
version = "0.1.0"
description = "Воспроизводимый пайплайн подготовки источников для RAG."
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "datasketch>=1.10.0",
  "llama-index>=0.14.21",
  "llama-index-readers-file>=0.6.0",
  "langchain-core>=1.4.0",
  "langchain-openai>=1.2.2",
  "langgraph>=1.2.2",
  "lxml>=6.1.0",
  "mlflow>=3.12.0",
  "numpy>=2.3.0",
  "httpx2>=2.2.0",
  "huggingface-hub>=1.1.0",
  "openai>=2.26.0",
  "pandas>=2.3.3",
  "portalocker>=2.7.0,<4.0",
  "prefect>=3.7.0",
  "pydantic==2.12.5",
  "python-dotenv>=1.2.2",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "PyYAML>=6.0.3",
  "qdrant-client>=1.18.0",
  "spacy>=3.8.14",
  "tiktoken>=0.12.0",
  "tenacity>=9.1.2",
  "torch>=2.11.0",
  "transformers>=5.3.0",
  "peft>=0.18.1",
  "datasets>=4.7.0",
  "accelerate>=1.13.0",
  "trl>=0.29.0",
  "unstructured[pdf]>=0.22.27",
  "unstructured-inference>=1.6.11",
]

[project.scripts]
rag-prep = "rag_prep.cli:main"
rag-agent = "agent_app.cli:main"
llm-tune = "llm_tuning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
