[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-data-prep"
version = "0.1.0"
description = "Воспроизводимый пайплайн подготовки источников для RAG."
requires-python = ">=3.13"
dependencies = [
  "a2a-sdk>=1.1.1,<2",
  "langchain-core>=1.4.9,<2",
  "langchain-gigachat>=0.5.1",
  "langchain-openai>=1.3.5,<2",
  "langgraph>=1.2.9,<2",
  "langgraph-checkpoint-sqlite>=3.1.0,<4",
  "gigachat>=0.2.1",
  "mlflow>=3.14.0,<4",
  "mcp>=1.28.1,<2",
  "numpy>=2.4.6,<2.5",
  "httpx2>=2.7.0,<3",
  "fastapi>=0.139.2,<1",
  "huggingface-hub>=1.1.0",
  "openai>=2.45.0,<3",
  "peft>=0.18.1",
  "portalocker>=2.7.0,<4.0",
  "prometheus-client>=0.25.0",
  "PyJWT>=2.13.0,<3",
  "opentelemetry-api>=1.44.0,<2",
  "opentelemetry-sdk>=1.44.0,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.44.0,<2",
  "opentelemetry-instrumentation-fastapi>=0.65b0,<1",
  "opentelemetry-instrumentation-httpx>=0.65b0,<1",
  "opentelemetry-instrumentation-celery>=0.65b0,<1",
  "pydantic>=2.12.5,<2.13",
  "python-dotenv>=1.2.2",
  "PyYAML>=6.0.3",
  "qdrant-client>=1.18.0",
  "sse-starlette>=3.4.5,<4",
  "starlette>=1.3.1,<2",
  "tiktoken>=0.13.0,<1",
  "tenacity>=9.1.4,<10",
  "torch>=2.11.0",
  "transformers>=5.3.0",
  "accelerate>=1.13.0",
  "uvicorn>=0.51.0,<1",
  "celery>=5.6.3,<6",
  "redis>=8.0.1,<9",
  "flower>=2.0.1,<3",
  "camunda-orchestration-sdk>=9.0.1,<10",
  "detect-secrets>=1.5.0,<2",
  "RestrictedPython>=8.4,<9",
]

[project.optional-dependencies]
data-preparation = [
  "beautifulsoup4>=4.14.3",
  "datasketch>=1.10.0",
  "llama-index>=0.14.21",
  "llama-index-readers-file>=0.6.0",
  "lxml>=6.1.0",
  "pandas>=2.3.3",
  "prefect>=3.7.0",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "spacy>=3.8.14",
  "unstructured[pdf]>=0.22.27",
  "unstructured-inference>=1.6.11",
]
fine-tuning = [
  "datasets>=4.7.0",
  "trl>=0.29.0",
]
quality = [
  "hypothesis>=6.156.6,<7",
]
full = [
  "beautifulsoup4>=4.14.3",
  "datasets>=4.7.0",
  "datasketch>=1.10.0",
  "llama-index>=0.14.21",
  "llama-index-readers-file>=0.6.0",
  "lxml>=6.1.0",
  "pandas>=2.3.3",
  "prefect>=3.7.0",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "spacy>=3.8.14",
  "trl>=0.29.0",
  "unstructured[pdf]>=0.22.27",
  "unstructured-inference>=1.6.11",
  "hypothesis>=6.156.6,<7",
]

[project.scripts]
rag-prep = "rag_prep.cli:main"
rag-agent = "agent_app.cli:main"
llm-tune = "llm_tuning.cli:main"
rag-support = "agent_app.service.cli:main"
rag-index = "rag_prep.vector_store_cli:main"
rag-code-runner = "code_runner.cli:main"
rag-orchestration-worker = "agent_app.orchestration.worker_cli:main"
rag-camunda = "agent_app.orchestration.camunda_cli:main"
rag-eval = "agent_app.evaluation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
